before roundtrip flight search

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 node_modules
+jspm_packages
+bower_components
+META-INF
+.idea
+*.iml
+target
+out
+aot/*
+dist/*
+yarn.lock
+*.log
+*.editorconfig
+.vscode
+out
