--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jade": "~1.11.0",
     "mongoose": "^4.11.13",
     "morgan": "~1.8.1",
+    "ng-infinite-scroll": "^1.3.0",
     "puppeteer": "^0.11.0",
     "serve-favicon": "~2.4.2"
   }
