--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "dotenv": "^6.0.0",
     "ejs": "^2.5.7",
     "express": "~4.15.2",
     "jade": "~1.11.0",
