--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "engines": {
     "node": ">=0.10.0"
   },
+  "puppeteer": {
+    "chromium_revision": "515411"
+  },
   "keyword": [
     "airport",
     "heliport",
@@ -35,5 +38,8 @@
     "ng-infinite-scroll": "^1.3.0",
     "puppeteer": "^0.11.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "ws": "3.3.2"
   }
 }
